Update rigth column. Add template for Callsign.

--- a/two_columt_template/cv_tm_sde.tex
+++ b/two_columt_template/cv_tm_sde.tex
@@ -10,7 +10,7 @@
 % Alessandro (The CV Inn)
 %
 % IMPORTANT: THIS TEMPLATE NEEDS TO BE COMPILED WITH XeLaTeX
-% compile with lualatex: lualatex cv_tm_sde.tex
+% compile with lualatex: lualatex cv_tm_sde.tex && open cv_tm_sde.pdf
 %
 % This template uses several fonts not included with Windows/Linux by
 % default. If you get compilation errors saying a font is missing, find the line
@@ -92,6 +92,33 @@
 \section{Work Experience}
 
 %------------------------------------------------
+% WORK EXPERIENCE Callsign - London
+%------------------------------------------------
+
+\vspace{0.5cm}
+{\raggedleft\textsc{April 2018 - present}\par}
+
+{\raggedright\large Research scientist/ML Engineer\\
+\textit{Callsign}, London, United Kingdom\\[5pt]}
+
+\normalsize{Tech lead for data science team of around 10 people. 
+Developed a forecasting solution that accurately predicts global 
+and regional customer demand. Scaled to a high number of product 
+lines (over 250k) by building a distributed application running 
+on Apache Spark and Google Dataproc. Among multiple forecasting models 
+developed LSTM predictor utilizing Keras/TensorFlow.
+\\
+
+Automated promotion strategy for multiple webshops and locales. 
+Solution reduced manual work required while achieving better conversion.
+Reduced distribution warehouse costs by optimising operations such 
+as walking distance on the warehouse floor.
+\\
+
+Spearheaded cloud adoption within the company.}\\
+
+
+%------------------------------------------------
 % WORK EXPERIENCE THG - Manchester
 %------------------------------------------------
 
@@ -161,10 +188,10 @@ Developed highly parallelisable code base that runs on a fleet of thousands of h
 
 \colorbox{shade}{\textcolor{text1}{
 \begin{tabular}{c|p{7cm}}
-\raisebox{-4pt}{\textifsymbol{18}} & 25 Chorlton st, Manchester, UK \\
+\raisebox{-4pt}{\textifsymbol{18}} & Southwark, London, UK \\
 \raisebox{-3pt}{\Mobilefone} & +447585234606 \\
 \raisebox{-1pt}{\Letter} & \href{mailto:tautvydas.misiunas@gmail.com}{tautvydas.misiunas@gmail.com} \\
-\faLinkedin & \href{https://www.linkedin.com/in/misiunas}{Tautvydas} \\
+\faLinkedin & \href{https://www.linkedin.com/in/misiunas}{Tautvydas Misiunas} \\
 \faGithub & \href{https://github.com/Tautvis}{Tautvis} \\
 \end{tabular}
 }
@@ -211,9 +238,9 @@ Developed highly parallelisable code base that runs on a fleet of thousands of h
 2014     & \textbf{Recommendation system for MMO games}\\
          & \textbf{MSc thesis}\\
 & \textit{The University of Edinburgh \& deltaDNA}\\
-&\\
-2013	 & \textbf{Short term movements in stock prices}\\
-& \textit{Kaggle}
+% &\\
+% 2013	 & \textbf{Short term movements in stock prices}\\
+% & \textit{Kaggle}
 
 \end{tabular}\\[10pt]
 
@@ -226,11 +253,11 @@ Developed highly parallelisable code base that runs on a fleet of thousands of h
 
 \begin{tabular}{rl}
 Machine & \textsc{Scikit-learn}, \textsc{TensorFlow}, \textsc{Keras},\\
-learning & \textsc{Matlab}, \textsc{Weka}, \textsc{Hadoop},\\
-& \textsc{Spark}\\
-Software & \textsc{Java}, \textsc{Python}, \textsc{Scala}, Linux,\\
-development & \textsc{Jenkins}, maven, gradle, sbt,\\
-& \textsc{c++}, \textsc{bash}, \textsc{Ruby}, \textsc{AWS}, \textsc{GCP}\\
+learning & \textsc{Matlab}, \textsc{Hadoop}, \textsc{Spark}\\
+\rule{0pt}{4ex}   
+Software & \textsc{Python}, \textsc{Scala}, \textsc{Java}, \textsc{bash}, \textsc{Ruby},\\
+development & \textsc{Jenkins}, \textsc{GitLab CI}, maven, gradle, sbt,\\
+& Linux, \textsc{AWS}, \textsc{GCP}\\
 & \\
 \end{tabular}
 
@@ -340,7 +367,7 @@ Both applications are highly successful with over a million downloads.}\\
 \begin{itemize}
 	\item Kaggle - ML challenges
 	\item Project Euler - Computational math problems
-	\item Halite I \& II - autonomous agents via ML
+	\item Halite I, II \& III - autonomous agents via ML
 	\item Reinforcement learning
 	\item Sailing, skiing, quadcopters, movies, video games
 \end{itemize}
