First draft of Callsign experience

--- a/two_columt_template/cv_tm_sde.tex
+++ b/two_columt_template/cv_tm_sde.tex
@@ -101,21 +101,17 @@
 {\raggedright\large Research scientist/ML Engineer\\
 \textit{Callsign}, London, United Kingdom\\[5pt]}
 
-\normalsize{Tech lead for data science team of around 10 people. 
-Developed a forecasting solution that accurately predicts global 
-and regional customer demand. Scaled to a high number of product 
-lines (over 250k) by building a distributed application running 
-on Apache Spark and Google Dataproc. Among multiple forecasting models 
-developed LSTM predictor utilizing Keras/TensorFlow.
+\normalsize{
+Researched, prototyped and developed models to verify user identity based on biometrical data. 
+Primary focus on varying lenght sequence data modeling. For example data coming from swiping a card or drawing a curve; moving mouse cursor on the screen; entering pin sequence on a mobile device.
+Combining multiple sensor inputs to express joint probability via bespoke neural network architecture.
 \\
 
-Automated promotion strategy for multiple webshops and locales. 
-Solution reduced manual work required while achieving better conversion.
-Reduced distribution warehouse costs by optimising operations such 
-as walking distance on the warehouse floor.
+Organized, executed and cummunicated research efforts for modeling aforementioned projects. Resulting in state-of-the-art models deployed in production environment and serving real time traffic within SLA constrains.
 \\
 
-Spearheaded cloud adoption within the company.}\\
+Led neural network research and application within the team.
+}\\
 
 
 %------------------------------------------------
@@ -143,36 +139,6 @@ as walking distance on the warehouse floor.
 \\
 
 Spearheaded cloud adoption within the company.}\\
-
-%------------------------------------------------
-% WORK EXPERIENCE Amazon
-%------------------------------------------------
-
-\vspace{0.5cm}
-{\raggedleft\textsc{Oct 2014 - Sep 2016}\par}
-
-{\raggedright\large Software development engineer\\
-\textit{Amazon}, United Kingdom and Canada\\[5pt]}
-
-\normalsize{I worked in a team that designed and 
-developed a streaming payment disbursement 
-platform designed to resiliently handle \$100B+ payment throughput. 
-I focused on fraud/duplicate detection prototype module
-that applies ML and fuzzy matching that outperform rule based approach.
-\\
-
-Prior to this I worked in a team that is responsible for majority of personalized 
-content on Amazon website and services, such as Fire TV, worldwide.
-Extended a human heuristics based recommendation
-ranking system with machine learned models allowing flexible
-optimization goals as well as better customer experience via accurate personalization.
-Quickly prototyped new models and performed analysis in Python
-while productionising best performing ideas in Java.
-\\
-
-Prototyped a book language inference model that works purely from the title of the book.
-Prototyped a model to detect adult content used to prevent inappropriate content on main Amazon website.
-Developed highly parallelisable code base that runs on a fleet of thousands of hosts.}\\
 
 
 %----------------------------------------------------------------------------------------
@@ -270,7 +236,7 @@ development & \textsc{Jenkins}, \textsc{GitLab CI}, maven, gradle, sbt,\\
 %----------------------------------------------------------------------------------------
 \newpage
 
-\vspace*{2cm}
+% \vspace*{2cm}
 
 \begin{minipage}[t]{0.5\textwidth} % Start the left-hand side of the page
 \vspace{0pt} % Trick for alignment
@@ -278,6 +244,36 @@ development & \textsc{Jenkins}, \textsc{GitLab CI}, maven, gradle, sbt,\\
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE (Continued)
 %----------------------------------------------------------------------------------------
+
+%------------------------------------------------
+% WORK EXPERIENCE Amazon
+%------------------------------------------------
+
+\vspace{0.5cm}
+{\raggedleft\textsc{Oct 2014 - Sep 2016}\par}
+
+{\raggedright\large Software development engineer\\
+\textit{Amazon}, United Kingdom and Canada\\[5pt]}
+
+\normalsize{I worked in a team that designed and 
+developed a streaming payment disbursement 
+platform designed to resiliently handle \$100B+ payment throughput. 
+I focused on fraud/duplicate detection prototype module
+that applies ML and fuzzy matching that outperform rule based approach.
+\\
+
+Prior to this I worked in a team that is responsible for majority of personalized 
+content on Amazon website and services, such as Fire TV, worldwide.
+Extended a human heuristics based recommendation
+ranking system with machine learned models allowing flexible
+optimization goals as well as better customer experience via accurate personalization.
+Quickly prototyped new models and performed analysis in Python
+while productionising best performing ideas in Java.
+\\
+
+Prototyped a book language inference model that works purely from the title of the book.
+Prototyped a model to detect adult content used to prevent inappropriate content on main Amazon website.
+Developed highly parallelisable code base that runs on a fleet of thousands of machines.}\\
 
 %------------------------------------------------
 % WORK EXPERIENCE Ocado
@@ -351,6 +347,8 @@ Both applications are highly successful with over a million downloads.}\\
 \section{Publications}
 
 \begin{tabular}{rl}
+2019	 & \textbf{Whitepaper: Behavioral PIN Authentication} \\
+& \textit{Callsign} \\
 2012	 & \textbf{Ordered assemblies of triangular-shaped} \\
          & \textbf{molecules with strongly interacting vertices:}\\
          & \textbf{phase diagrams for honeycomb and zigzag}\\
