Move android experience to project section to fit in two pages

--- a/two_columt_template/cv_tm_sde.tex
+++ b/two_columt_template/cv_tm_sde.tex
@@ -204,6 +204,9 @@ Spearheaded cloud adoption within the company.}\\
 2014     & \textbf{Recommendation system for MMO games}\\
          & \textbf{MSc thesis}\\
 & \textit{The University of Edinburgh \& deltaDNA}\\
+&\\
+2012     & \textbf{Two Android games}\\
+         & \textbf{Over a million downloads}\\
 % &\\
 % 2013	 & \textbf{Short term movements in stock prices}\\
 % & \textit{Kaggle}
@@ -309,19 +312,6 @@ to support molecule's ability to settle ontothe lattice.
 The model successfully explained two structures which were observed in experiments.
 The model predicted a new structure and defined under what circumstances it forms.}\\
 
-
-%------------------------------------------------
-% WORK EXPERIENCE Android
-%------------------------------------------------
-
-\vspace{0.5cm}
-{\raggedleft\textsc{July 2012}\par}
-
-{\raggedright\large Android games\\
-\textit{Mobile app}\\[5pt]}
-
-\normalsize{Co-created two Android free-to-play games.
-Both applications are highly successful with over a million downloads.}\\
 
 \end{minipage} % End the left-hand side of the page
 \hfill
