Frazing, typos, formatting

--- a/two_columt_template/cv_tm_sde.tex
+++ b/two_columt_template/cv_tm_sde.tex
@@ -102,15 +102,29 @@
 \textit{Callsign}, London, United Kingdom\\[5pt]}
 
 \normalsize{
-Researched, prototyped and developed models to verify user identity based on biometrical data. 
-Primary focus on varying lenght sequence data modeling. For example data coming from swiping a card or drawing a curve; moving mouse cursor on the screen; entering pin sequence on a mobile device.
-Combining multiple sensor inputs to express joint probability via bespoke neural network architecture.
+Researched, prototyped and developed models to verify user 
+identity based on biometric data. Primary focus on varying 
+length sequence data modeling. For example data coming from 
+swiping a card or drawing a curve on a mobile device with 
+a finger; moving mouse cursor on the screen; entering pin 
+sequence on a mobile device. Combining multiple sensor inputs 
+(such as touch, gyroscope, accelerometer and orientation sensors)
+to express joint probability via bespoke neural network architecture.
 \\
 
-Organized, executed and cummunicated research efforts for modeling aforementioned projects. Resulting in state-of-the-art models deployed in production environment and serving real time traffic within SLA constrains.
+Organized, executed and communicated research efforts for 
+modeling aforementioned projects. Resulting in state-of-the-art 
+models deployed in production environment and serving real 
+time traffic within SLA constrains.
 \\
 
 Led neural network research and application within the team.
+\\
+
+Worked on ML model serving/deployment framework. Framework 
+enables separation of modeling and data engineering concerns. 
+Additionally, it provides common infrastructure for models to 
+run locally and in cloud backed fleet.
 }\\
 
 
@@ -206,7 +220,7 @@ Spearheaded cloud adoption within the company.}\\
 & \textit{The University of Edinburgh \& deltaDNA}\\
 &\\
 2012     & \textbf{Two Android games}\\
-         & \textbf{Over a million downloads}\\
+         & Over a million downloads.\\
 % &\\
 % 2013	 & \textbf{Short term movements in stock prices}\\
 % & \textit{Kaggle}
@@ -308,7 +322,7 @@ The module required improved routing routine within a continuously changing ware
  developed computational model to emulate the behavior
 of triangular-shaped molecules. We have extended existing
 phase models, including Potts and Blume-Emery-Griffits,
-to support molecule's ability to settle ontothe lattice.
+to support molecule's ability to settle onto the lattice.
 The model successfully explained two structures which were observed in experiments.
 The model predicted a new structure and defined under what circumstances it forms.}\\
 
@@ -357,7 +371,7 @@ The model predicted a new structure and defined under what circumstances it form
 	\item Project Euler - Computational math problems
 	\item Halite I, II \& III - autonomous agents via ML
 	\item Reinforcement learning
-	\item Sailing, skiing, quadcopters, movies, video games
+	\item Sailing, skiing, quad-copters, movies, video games
 \end{itemize}
 
 \end{minipage} % End right-hand side of the page
