Update experience a bit

--- a/two_columt_template/cv_tm_sde.tex
+++ b/two_columt_template/cv_tm_sde.tex
@@ -98,7 +98,7 @@
 \vspace{0.5cm}
 {\raggedleft\textsc{April 2018 - present}\par}
 
-{\raggedright\large Research scientist/ML Engineer\\
+{\raggedright\large Senior Research scientist/ML Engineer\\
 \textit{Callsign}, London, United Kingdom\\[5pt]}
 
 \normalsize{
@@ -149,10 +149,7 @@ developed LSTM predictor utilizing Keras/TensorFlow.
 Automated promotion strategy for multiple webshops and locales. 
 Solution reduced manual work required while achieving better conversion.
 Reduced distribution warehouse costs by optimising operations such 
-as walking distance on the warehouse floor.
-\\
-
-Spearheaded cloud adoption within the company.}\\
+as walking distance on the warehouse floor.}\\
 
 
 %----------------------------------------------------------------------------------------
